Media Controls: do not handle any event if no controls should be visible.

This is fixing a regression where a tap on a video without controls
would not be received by the page.

BUG=675312
R=avayvod@chromium.org

Review-Url: https://codereview.chromium.org/2643723003
Cr-Commit-Position: refs/heads/master@{#444703}

Former-commit-id: 47fb183f3d579aed696376053b74e691618d3cf2